--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,7 @@
 		</dependency>
 
 		<!-- Spring framework -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
-			<version>3.0.0.RELEASE</version>
-		</dependency>
+
 
 
 
@@ -71,6 +67,11 @@
 			<version>3.0.0.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>3.0.0.RELEASE</version>
+		</dependency>
 
 
 		<dependency>
@@ -167,6 +168,18 @@
 			<version>1.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.6.11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.6.11</version>
+		</dependency>
+
 		<!-- CGLIB -->
 		<dependency>
 			<groupId>cglib</groupId>
@@ -185,6 +198,13 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.171</version>
+		</dependency>
+
 
 
 
@@ -217,11 +237,21 @@
 			<id>hibernate</id>
 			<url>http://mvnrepository.com/</url>
 		</repository>
-
 		<repository>
 			<id>JBoss repository</id>
 			<url>http://repository.jboss.com/maven2/</url>
 		</repository>
-	</repositories>
+		<repository>
+			<id>com.springsource.repository.bundles.release</id>
+			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
+			<url>http://repository.springsource.com/maven/bundles/release</url>
+		</repository>
 
+		<repository>
+			<id>com.springsource.repository.bundles.external</id>
+			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+			<url>http://repository.springsource.com/maven/bundles/external</url>
+		</repository>
+
+	</repositories>
 </project>
