--- a/web/pom.xml
+++ b/web/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.skuptsov.logviewer</groupId>
-	<artifactId>LogViewerConsumer</artifactId>
+	<artifactId>LogViewerConsumerWeb</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<name>LogViewerConsumer</name>
+	<version>1.0</version>
+	<name>LogViewerConsumerWeb</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
